Add pulse sequence figure

--- a/afi_blog/ActualFlipAngleImaging.ipynb
+++ b/afi_blog/ActualFlipAngleImaging.ipynb
@@ -139,7 +139,7 @@
     "</div>\n",
     "\n",
     "<p>\n",
-    "<center><img src=\"vfa_pulsesequence.png\" style=\"width:500px;height:auto;\"></center>"
+    "<center><img src=\"afi_pulsesequence.png\" style=\"width:500px;height:auto;\"></center>"
    ]
   },
   {
@@ -1409,7 +1409,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "kernel": "Python3"
+   },
    "source": [
     "<div class=blog_body>\n",
     "\n",
@@ -1422,7 +1424,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "kernel": "Python3"
+   },
    "source": [
     "<div class=figure_caption>\n",
     "<p style=\"text-align:justify;\">\n",
@@ -1435,7 +1439,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "kernel": "Python3"
+   },
    "outputs": [],
    "source": [
     "%% MATLAB/OCTAVE CODE\n",
@@ -1474,7 +1480,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "kernel": "Python3"
+   },
    "outputs": [],
    "source": [
     "%get params --from Octave\n",
@@ -1486,7 +1494,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "kernel": "Python3"
+   },
    "outputs": [],
    "source": [
     "# PYTHON CODE\n",
