Minor notebook fixes

--- a/afi_blog/ActualFlipAngleImaging.ipynb
+++ b/afi_blog/ActualFlipAngleImaging.ipynb
@@ -790,9 +790,9 @@
    "source": [
     "%get params --from Octave\n",
     "%get Nex_range --from Octave\n",
-    "%get signal_ideal_spoil --from Octave\n",
-    "%get signal_optimal_crush_and_rf_spoil --from Octave\n",
-    "%get signal_no_gradient_and_rf_spoil --from Octave"
+    "%get signal1_ideal_spoil --from Octave\n",
+    "%get signal1_optimal_crush_and_rf_spoil --from Octave\n",
+    "%get signal1_no_gradient_and_rf_spoil --from Octave"
    ]
   },
   {
@@ -811,7 +811,7 @@
     "\n",
     "init_notebook_mode(connected=True)\n",
     "\n",
-    "data1.1 = [dict(\n",
+    "data1_1 = [dict(\n",
     "        visible = False,\n",
     "        mode = 'lines',\n",
     "        x = params[\"EXC_FA\"],\n",
@@ -820,9 +820,9 @@
     "        text = 'Ideal Spoiling',\n",
     "        hoverinfo = 'x+y+text') for ii in range(len(Nex_range))]\n",
     "\n",
-    "data1.1[10]['visible'] = True\n",
+    "data1_1[10]['visible'] = True\n",
     "\n",
-    "data2.1 = [dict(\n",
+    "data2_1 = [dict(\n",
     "        visible = False,\n",
     "        mode = 'lines',\n",
     "        x = params[\"EXC_FA\"],\n",
@@ -831,9 +831,9 @@
     "        text = 'Gradient & RF Spoiling',\n",
     "        hoverinfo = 'x+y+text') for ii in range(len(Nex_range))]\n",
     "\n",
-    "data2.1[10]['visible'] = True\n",
+    "data2_1[10]['visible'] = True\n",
     "\n",
-    "data3.1 = [dict(\n",
+    "data3_1 = [dict(\n",
     "        visible = False,\n",
     "        mode = 'lines',\n",
     "        x = params[\"EXC_FA\"],\n",
@@ -842,15 +842,15 @@
     "        text = 'No Spoiling',\n",
     "        hoverinfo = 'x+y+text') for ii in range(len(Nex_range))]\n",
     "\n",
-    "data3.1[10]['visible'] = True\n",
+    "data3_1[10]['visible'] = True\n",
     "\n",
-    "data = data1.1 + data2.1+ data3.1\n",
+    "data = data1_1 + data2_1+ data3_1\n",
     "\n",
     "steps = []\n",
     "for i in range(len(Nex_range)):\n",
     "    step = dict(\n",
     "        method = 'restyle',  \n",
-    "        args = ['visible', [False] * len(data1.1)],\n",
+    "        args = ['visible', [False] * len(data1_1)],\n",
     "        label = str(Nex_range[i])\n",
     "        )\n",
     "    step['args'][1][i] = True # Toggle i'th trace to \"visible\"\n",
@@ -1440,7 +1440,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "kernel": "Python3"
+    "kernel": "Octave"
    },
    "outputs": [],
    "source": [
@@ -2020,13 +2020,18 @@
      "Octave",
      "octave",
      "Octave",
-     "#dff8fb"
+     "#dff8fb",
+     ""
     ],
     [
      "Python3",
      "python3",
      "Python3",
-     "#FFD91A"
+     "#FFD91A",
+     {
+      "name": "ipython",
+      "version": 3
+     }
     ]
    ],
    "panel": {
@@ -2034,7 +2039,7 @@
     "height": 0,
     "style": "side"
    },
-   "version": "0.17.2"
+   "version": "0.19.4"
   }
  },
  "nbformat": 4,
