Figure 2, slider fixes

--- a/afi_blog/ActualFlipAngleImaging.ipynb
+++ b/afi_blog/ActualFlipAngleImaging.ipynb
@@ -224,7 +224,7 @@
     "% All times are in milliseconds\n",
     "% All flip angles are in degrees\n",
     "\n",
-    "TR1_range = 5:5:200;\n",
+    "TR1_range = 5:5:50;\n",
     "n = 5;\n",
     "TR2_range = n*TR1_range;\n",
     "\n",
@@ -369,7 +369,7 @@
     "    step = dict(\n",
     "        method = 'restyle',  \n",
     "        args = ['visible', [False] * len(data1_1)],\n",
-    "        label = str('TR1 value (ms): ') + str(TR1_range[i]) + str(' and TR2 value (ms): ') + str(TR2_range[i])\n",
+    "        label = str(TR1_range[i])\n",
     "        )\n",
     "    step['args'][1][i] = True # Toggle i'th trace to \"visible\"\n",
     "    steps.append(step)\n",
@@ -379,13 +379,13 @@
     "        x = 0,\n",
     "        y = -0.02,\n",
     "        active = 3,\n",
-    "        currentvalue = {\"prefix\": \" \"},\n",
+    "        currentvalue = {\"prefix\": \"TR1 value (ms): <b>\"},\n",
     "        pad = {\"t\": 50, \"b\": 10},\n",
     "        steps = steps)]\n",
     "\n",
     "layout = go.Layout(\n",
-    "    width=580,\n",
-    "    height=450,\n",
+    "    width=650,\n",
+    "    height=520,\n",
     "    margin=go.layout.Margin(\n",
     "        l=80,\n",
     "        r=40,\n",
@@ -415,6 +415,18 @@
     "                size=22\n",
     "            ),\n",
     "            textangle=-90,\n",
+    "            xref='paper',\n",
+    "            yref='paper'\n",
+    "        ),\n",
+    "        dict(\n",
+    "            x=-0.005,\n",
+    "            y=-0.3,\n",
+    "            showarrow=False,\n",
+    "            text='TR<sub>2</sub> = 5TR<sub>1</sub>',\n",
+    "            font=dict(\n",
+    "                family='Times New Roman',\n",
+    "                size=12\n",
+    "            ),\n",
     "            xref='paper',\n",
     "            yref='paper'\n",
     "        ),\n",
