Loading gzipped data

--- a/afi_blog/ActualFlipAngleImaging.ipynb
+++ b/afi_blog/ActualFlipAngleImaging.ipynb
@@ -377,7 +377,7 @@
     "sliders=[\n",
     "    dict(\n",
     "        x = 0,\n",
-    "        y = -0.02,\n",
+    "        y = -0.09,\n",
     "        active = 3,\n",
     "        currentvalue = {\"prefix\": \"TR1 value (ms): <b>\"},\n",
     "        pad = {\"t\": 50, \"b\": 10},\n",
@@ -419,8 +419,8 @@
     "            yref='paper'\n",
     "        ),\n",
     "        dict(\n",
-    "            x=-0.005,\n",
-    "            y=-0.3,\n",
+    "            x=-0.007,\n",
+    "            y=-0.25,\n",
     "            showarrow=False,\n",
     "            text='TR<sub>2</sub> = 5TR<sub>1</sub>',\n",
     "            font=dict(\n",
@@ -1665,7 +1665,7 @@
     "%% MATLAB/OCTAVE CODE\n",
     "% Download Actual Flip-Angle Imaging brain MRI data for Figure 8 of the blog post\n",
     "\n",
-    "cmd = ['curl -L -o b1_afi.zip https://osf.io/csjgx/download/'];\n",
+    "cmd = ['curl -L -o b1_afi.zip https://osf.io/csjgx/download?version=6'];\n",
     "[STATUS,MESSAGE] = unix(cmd);\n",
     "unzip('b1_afi.zip');\n"
    ]
@@ -1689,8 +1689,8 @@
     "\n",
     "% Format data structure so that they may be fit by the model\n",
     "data = struct();\n",
-    "data.AFIData1 = load_nii_data('b1_afi/AFIData1.nii');\n",
-    "data.AFIData2 = load_nii_data('b1_afi/AFIData2.nii');\n",
+    "data.AFIData1 = load_nii_data('b1_afi/AFIData1.nii.gz');\n",
+    "data.AFIData2 = load_nii_data('b1_afi/AFIData2.nii.gz');\n",
     "\n",
     "FitResults = FitData(data,Model,0); % The '0' flag is so that no wait bar is shown."
    ]
