--- a/afi_blog/ActualFlipAngleImaging.ipynb
+++ b/afi_blog/ActualFlipAngleImaging.ipynb
@@ -1706,14 +1706,14 @@
     "%% MATLAB/OCTAVE CODE\n",
     "% Code used to re-orient the images to make pretty figures, and to assign variables with the axis lengths.\n",
     "\n",
-    "B1map_filtered = imrotate(FitResults.B1map_filtered,-90);\n",
+    "B1map = imrotate(squeeze(FitResults.B1map_filtered(:,:,14)),-90);\n",
     "\n",
-    "xAxis = [0:size(B1map_filtered,2)-1];\n",
-    "yAxis = [0:size(B1map_filtered,1)-1];\n",
+    "xAxis = [0:size(B1map,2)-1];\n",
+    "yAxis = [0:size(B1map,1)-1];\n",
     "\n",
-    "% Raw MRI data at different TI values\n",
-    "AFIData1 = imrotate(AFIData1,-90);\n",
-    "AFIData2 = imrotate(AFIData2,-90);\n"
+    "% Raw MRI AFI data\n",
+    "AFIData1 = imrotate(squeeze(data.AFIData1(:,:,14)),-90);\n",
+    "AFIData2 = imrotate(squeeze(data.AFIData2(:,:,14)),-90);"
    ]
   },
   {
@@ -1727,7 +1727,7 @@
    },
    "outputs": [],
    "source": [
-    "%get B1map_filtered --from Octave\n",
+    "%get B1map --from Octave\n",
     "%get AFIData1 --from Octave\n",
     "%get AFIData2 --from Octave\n",
     "%get xAxis --from Octave\n",
@@ -1761,13 +1761,15 @@
     "                   colorscale='Greys',\n",
     "                   showscale = False,\n",
     "                   visible=True,\n",
-    "                   name = 'Signal1')\n",
+    "                   name = 'Signal2')\n",
     "trace3 = go.Heatmap(x = xAxis,\n",
     "                   y = yAxis,\n",
     "                   z=B1map_filtered,\n",
     "                   zmin=0.7,\n",
     "                   zmax=1.3,\n",
     "                   colorscale='RdBu',\n",
+    "                   xaxis='x2',\n",
+    "                   yaxis='y2',\n",
     "                   visible=True,\n",
     "                   name = 'B1 raw values')\n",
     "\n",
@@ -1808,7 +1810,7 @@
     "                l=50),\n",
     "    annotations=[\n",
     "        dict(\n",
-    "            x=0.055,\n",
+    "            x=0.07,\n",
     "            y=1.15,\n",
     "            showarrow=False,\n",
     "            text='Input Data',\n",
@@ -1820,7 +1822,7 @@
     "            yref='paper'\n",
     "        ),\n",
     "        dict(\n",
-    "            x=0.6,\n",
+    "            x=0.60,\n",
     "            y=1.15,\n",
     "            showarrow=False,\n",
     "            text='B<sub>1</sub> field map',\n",
@@ -1832,7 +1834,7 @@
     "            yref='paper'\n",
     "        ),\n",
     "        dict(\n",
-    "            x=1.22,\n",
+    "            x=1.12,\n",
     "            y=1.15,\n",
     "            showarrow=False,\n",
     "            text='B<sub>1</sub>',\n",
