Update osf version

--- a/mp2rage_blog/MP2RAGE.ipynb
+++ b/mp2rage_blog/MP2RAGE.ipynb
@@ -458,7 +458,7 @@
     "%% MATLAB/OCTAVE CODE\n",
     "% Download variable flip angle brain MRI data for Figure 7 of the blog post\n",
     "\n",
-    "cmd = ['curl -L -o mp2rage.zip https://osf.io/8x2c9/download/'];\n",
+    "cmd = ['curl -L -o mp2rage.zip https://osf.io/8x2c9/download?version=1'];\n",
     "[STATUS,MESSAGE] = unix(cmd);\n",
     "unzip('mp2rage.zip');\n"
    ]
