Update VFA notebook to use new qMRLab feature

--- a/vfa_blog/VariableFlipAngle.ipynb
+++ b/vfa_blog/VariableFlipAngle.ipynb
@@ -1321,6 +1321,8 @@
     "\n",
     "Model = vfa_t1; \n",
     "\n",
+    "Model.voxelwise = 1;\n",
+    "\n",
     "Opt.SNR = 100;\n",
     "Opt.TR = params.TR;\n",
     "Opt.T1 = x.T1;\n",
@@ -1344,7 +1346,9 @@
     "end\n",
     "%\n",
     "Model = vfa_t1; \n",
-    "    \n",
+    "\n",
+    "Model.voxelwise = 1;\n",
+    "\n",
     "FlipAngle = nominal_EXC_FA';\n",
     "TR = params.TR .* ones(size(FlipAngle));\n",
     "\n",
