Fix error in equations for TB and TC in text, add errata

--- a/mp2rage_blog/MP2RAGE.ipynb
+++ b/mp2rage_blog/MP2RAGE.ipynb
@@ -178,7 +178,7 @@
     "</p>\n",
     "\n",
     "<p style=\"text-align:justify;\">\n",
-    "where B<sub>1</sub><sup>-</sup> is the receive field sensitivity, “eff” is the adiabatic inversion pulse efficiency, ER = exp(-TR/T<sub>1</sub>), EA = exp(-TA/T<sub>1</sub>), EB = exp(-TB/T<sub>1</sub>), EC = exp(-TC/T<sub>1</sub>). The variables TA, TB, and TC are the three different delay times (TA: time between inversion pulse and beginning of the GRE<sub>1</sub> block, TB: time between the end of GRE<sub>1</sub> and beginning of GRE<sub>2</sub>, TC: time between the end of GRE<sub>2</sub> and the end of the TR). If no k-space acceleration is used (e.g. no partial Fourier or parallel imaging acceleration), then these values are TA = TI<sub>1</sub> - (n/2)TR, TB = TI<sub>2</sub> - TI<sub>1</sub> + (n/2)TR, and TC = TR<sub>MP2RAGE</sub> - TI<sub>2</sub> + (n/2)TR, where n is the number of voxels acquired in the 3D phase encode direction varied within each GRE block. The value m<sub>z,ss</sub> is the steady-state longitudinal magnetization prior to the inversion pulse, and is given by:\n",
+    "where B<sub>1</sub><sup>-</sup> is the receive field sensitivity, “eff” is the adiabatic inversion pulse efficiency, ER = exp(-TR/T<sub>1</sub>), EA = exp(-TA/T<sub>1</sub>), EB = exp(-TB/T<sub>1</sub>), EC = exp(-TC/T<sub>1</sub>). The variables TA, TB, and TC are the three different delay times (TA: time between inversion pulse and beginning of the GRE<sub>1</sub> block, TB: time between the end of GRE<sub>1</sub> and beginning of GRE<sub>2</sub>, TC: time between the end of GRE<sub>2</sub> and the end of the TR). If no k-space acceleration is used (e.g. no partial Fourier or parallel imaging acceleration), then these values are TA = TI<sub>1</sub> - (n/2)TR, TB = TI<sub>2</sub> - (TI<sub>1</sub> + nTR), and TC = TR<sub>MP2RAGE</sub> - (TI<sub>2</sub> + (n/2)TR), where n is the number of voxels acquired in the 3D phase encode direction varied within each GRE block. The value m<sub>z,ss</sub> is the steady-state longitudinal magnetization prior to the inversion pulse, and is given by:\n",
     "</p>\n",
     "\n",
     "<p style=\"text-align:justify;\">\n",
@@ -802,6 +802,32 @@
     "Waehnert, M.D. et al., 2014. Anatomically motivated modeling of cortical laminae. <i>NeuroImage</i>, 93 Pt 2, pp.210–220.\n",
     "</p>\n",
     "\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "kernel": "Python3"
+   },
+   "source": [
+    "<center> <h2 style=\"font-family:timesnewroman;font-size:30px\">Errata</h2> </center>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "kernel": "Python3"
+   },
+   "source": [
+    "<div class=biblio_body>\n",
+    "<p style=\"text-align:justify;\">\n",
+    "<ol> \n",
+    "<li>A previous version of this text incorrectly stated the equations for TB and TC. They were written as TB = TI<sub>2</sub> - TI<sub>1</sub> + (n/2)TR and TC = TR<sub>MP2RAGE</sub> - TI<sub>2</sub> + (n/2)TR, whereas they should have been TB = TI<sub>2</sub> - (TI<sub>1</sub> + nTR) and TC = TR<sub>MP2RAGE</sub> - (TI<sub>2</sub> + (n/2)TR). This has been corrected in the text. Thank you to Marc-Antoine Fortin (<a href=\"https://www.linkedin.com/in/marc-antoine-fortin-7b3777163/?originalSubdomain=ca\">LinkedIn</a>, <a href=\"https://twitter.com/marcus_pulus\">Twitter</a>) from the <a href=\"https://www.mcgill.ca/medphys/mri-methods-research-group\">MRI Methods Research Group</a> at McGill University for notifying us of this error. \n",
+    "</li>\n",
+    "</ol>\n",
+    "\n",
+    "</p>\n",
     "</div>"
    ]
   },
