--- a/mp2rage_blog/MP2RAGE.ipynb
+++ b/mp2rage_blog/MP2RAGE.ipynb
@@ -821,13 +821,14 @@
    },
    "source": [
     "<div class=biblio_body>\n",
-    "<p style=\"text-align:justify;\">\n",
     "<ol> \n",
-    "<li>A previous version of this text incorrectly stated the equations for TB and TC. They were written as TB = TI<sub>2</sub> - TI<sub>1</sub> + (n/2)TR and TC = TR<sub>MP2RAGE</sub> - TI<sub>2</sub> + (n/2)TR, whereas they should have been TB = TI<sub>2</sub> - (TI<sub>1</sub> + nTR) and TC = TR<sub>MP2RAGE</sub> - (TI<sub>2</sub> + (n/2)TR). This has been corrected in the text. Thank you to Marc-Antoine Fortin (<a href=\"https://www.linkedin.com/in/marc-antoine-fortin-7b3777163/?originalSubdomain=ca\">LinkedIn</a>, <a href=\"https://twitter.com/marcus_pulus\">Twitter</a>) from the <a href=\"https://www.mcgill.ca/medphys/mri-methods-research-group\">MRI Methods Research Group</a> at McGill University for notifying us of this error. \n",
+    "<li><p style=\"text-align:justify;\">\n",
+    "A previous version of this text incorrectly stated the equations for TB and TC. They were written as TB = TI<sub>2</sub> - TI<sub>1</sub> + (n/2)TR and TC = TR<sub>MP2RAGE</sub> - TI<sub>2</sub> + (n/2)TR, whereas they should have been TB = TI<sub>2</sub> - (TI<sub>1</sub> + nTR) and TC = TR<sub>MP2RAGE</sub> - (TI<sub>2</sub> + (n/2)TR). This has been corrected in the text. Thank you to Marc-Antoine Fortin (<a href=\"https://www.linkedin.com/in/marc-antoine-fortin-7b3777163/?originalSubdomain=ca\" target=\"_blank\">LinkedIn</a>, <a href=\"https://twitter.com/marcus_pulus\" target=\"_blank\">Twitter</a>) from the <a href=\"https://www.mcgill.ca/medphys/mri-methods-research-group\" target=\"_blank\">MRI Methods Research Group</a> at McGill University for notifying us of this error. \n",
+    "<p style=\"text-align:justify;\">\n",
     "</li>\n",
     "</ol>\n",
     "\n",
-    "</p>\n",
+    "<p style=\"text-align:justify;\">\n",
     "</div>"
    ]
   },
