--- a/afi_blog/ActualFlipAngleImaging.ipynb
+++ b/afi_blog/ActualFlipAngleImaging.ipynb
@@ -869,21 +869,12 @@
     "    steps.append(step)\n",
     "\n",
     "sliders = [dict(\n",
-    "    {\n",
     "    x = 0,\n",
     "    y = -0.02,\n",
     "    active = 10,\n",
-    "    currentvalue = {\"prefix\": \"n<sup>th</sup> TR1: <b>\"},\n",
+    "    currentvalue = {\"prefix\": \"n<sup>th</sup> TR1-TR2: <b>\"},\n",
     "    pad = {\"t\": 50, \"b\": 10},\n",
     "    steps = steps\n",
-    "    },{\n",
-    "    x = 0,\n",
-    "    y = -0.1,\n",
-    "    active = 10,\n",
-    "    currentvalue = {\"prefix\": \"n<sup>th</sup> TR2: <b>\"},\n",
-    "    pad = {\"t\": 50, \"b\": 10},\n",
-    "    steps = steps\n",
-    "    }\n",
     ")]\n",
     "\n",
     "layout = go.Layout(\n",
@@ -1706,7 +1697,7 @@
     "%% MATLAB/OCTAVE CODE\n",
     "% Code used to re-orient the images to make pretty figures, and to assign variables with the axis lengths.\n",
     "\n",
-    "B1map = imrotate(squeeze(FitResults.B1map_filtered(:,:,14)),-90);\n",
+    "B1map_filtered = imrotate(squeeze(FitResults.B1map_filtered(:,:,14)),-90);\n",
     "\n",
     "xAxis = [0:size(B1map,2)-1];\n",
     "yAxis = [0:size(B1map,1)-1];\n",
@@ -1727,7 +1718,7 @@
    },
    "outputs": [],
    "source": [
-    "%get B1map --from Octave\n",
+    "%get B1map_filtered --from Octave\n",
     "%get AFIData1 --from Octave\n",
     "%get AFIData2 --from Octave\n",
     "%get xAxis --from Octave\n",
@@ -1771,7 +1762,7 @@
     "                   xaxis='x2',\n",
     "                   yaxis='y2',\n",
     "                   visible=True,\n",
-    "                   name = 'B1 raw values')\n",
+    "                   name = 'B1 values')\n",
     "\n",
     "data=[trace1, trace2, trace3]\n",
     "\n",
