--- a/afi_blog/ActualFlipAngleImaging.ipynb
+++ b/afi_blog/ActualFlipAngleImaging.ipynb
@@ -163,11 +163,11 @@
     "</p>\n",
     "\n",
     "<p style=\"text-align:justify;\">\n",
-    "<center><img src=\"equation1.png\" style=\"width:auto;height:50px;margin-bottom: 50px;margin-top: 50px;\"></center>\n",
+    "<center><img src=\"equation1.png\" style=\"width:800px;height:80px;margin-bottom: 50px;margin-top: 50px;\"></center>\n",
     "</p>\n",
     "    \n",
     "<p style=\"text-align:justify;\">\n",
-    "<center><img src=\"equation2.png\" style=\"width:auto;height:50px;margin-bottom: 50px;margin-top: 50px;\"></center>\n",
+    "<center><img src=\"equation2.png\" style=\"width:800px;height:85px;margin-bottom: 50px;margin-top: 50px;\"></center>\n",
     "</p>\n",
     "\n",
     "<p style=\"text-align:justify;\">\n",
@@ -967,7 +967,7 @@
     "</p>\n",
     "\n",
     "<p style=\"text-align:justify;\">\n",
-    "<center><img src=\"equation3.png\" style=\"width:auto;height:50px;margin-bottom: 50px;margin-top: 50px\"></center>\n",
+    "<center><img src=\"equation3.png\" style=\"width:700px;height:80px;margin-bottom: 50px;margin-top: 50px\"></center>\n",
     "</p>\n",
     "\n",
     "<p style=\"text-align:justify;\">\n",
@@ -975,7 +975,7 @@
     "</p>\n",
     "\n",
     "<p style=\"text-align:justify;\">\n",
-    "<center><img src=\"equation4.png\" style=\"width:auto;height:50px;margin-bottom: 50px;margin-top: 50px\"></center>\n",
+    "<center><img src=\"equation4.png\" style=\"width:700px;height:50px;margin-bottom: 50px;margin-top: 50px\"></center>\n",
     "</p>\n",
     "\n",
     "<p style=\"text-align:justify;\">\n",
@@ -983,7 +983,7 @@
     "</p>\n",
     "\n",
     "<p style=\"text-align:justify;\">\n",
-    "<center><img src=\"equation5.png\" style=\"width:auto;height:50px;margin-bottom: 50px;margin-top: 50px\"></center>\n",
+    "<center><img src=\"equation5.png\" style=\"width:700px;height:50px;margin-bottom: 50px;margin-top: 50px\"></center>\n",
     "</p>\n",
     "\n",
     "<p style=\"text-align:justify;\">\n",
@@ -1699,8 +1699,8 @@
     "\n",
     "B1map_filtered = imrotate(squeeze(FitResults.B1map_filtered(:,:,14)),-90);\n",
     "\n",
-    "xAxis = [0:size(B1map,2)-1];\n",
-    "yAxis = [0:size(B1map,1)-1];\n",
+    "xAxis = [0:size(B1map_filtered,2)-1];\n",
+    "yAxis = [0:size(B1map_filtered,1)-1];\n",
     "\n",
     "% Raw MRI AFI data\n",
     "AFIData1 = imrotate(squeeze(data.AFIData1(:,:,14)),-90);\n",
