Add precomputed Bloch simulations

--- a/afi_blog/ActualFlipAngleImaging.ipynb
+++ b/afi_blog/ActualFlipAngleImaging.ipynb
@@ -520,7 +520,18 @@
     "Nex_range = 1:1:150;\n",
     "\n",
     "%% Calculate signals\n",
-    "%\n",
+    "% This results were precomputed. Uncomment the lines below to run the simulation.\n",
+    "signal1_bloch = load('../blochsim/signal1_blochsim.mat');\n",
+    "signal2_bloch = load('../blochsim/signal2_blochsim.mat');\n",
+    "signal1_analytical = load('../blochsim/signal1_analytical.mat');\n",
+    "signal2_analytical = load('../blochsim/signal2_analytical.mat');\n",
+    "signal1_blochsim = signal1_bloch.signal1_blochsim;\n",
+    "signal2_blochsim = signal2_bloch.signal2_blochsim;\n",
+    "signal1_analytical = signal1_analytical.signal1_analytical;\n",
+    "signal2_analytical = signal2_analytical.signal2_analytical;\n",
+    "\n",
+    "%{\n",
+    "% Bloch simulations\n",
     "% To see all the options available, run `help b1_afi.analytical_solution`\n",
     "\n",
     "for ii = 1:length(Nex_range)\n",
@@ -533,7 +544,8 @@
     "    [~, Msig1, Msig2] = b1_afi.bloch_sim(params);\n",
     "    signal1_blochsim(ii,:) = abs(complex(Msig1));\n",
     "    signal2_blochsim(ii,:) = abs(complex(Msig2));\n",
-    "end\n"
+    "end\n",
+    "%}"
    ]
   },
   {
@@ -580,7 +592,7 @@
     "        text = 'S<sub>1</sub>: Analytical Solution',\n",
     "        hoverinfo = 'x+y+text') for ii in range(len(Nex_range))]\n",
     "\n",
-    "data1_1[49]['visible'] = True\n",
+    "data1_1[7]['visible'] = True\n",
     "\n",
     "data1_2 = [dict(\n",
     "        visible = False,\n",
@@ -591,7 +603,7 @@
     "        text = 'S<sub>2</sub>: Analytical Solution',\n",
     "        hoverinfo = 'x+y+text') for ii in range(len(Nex_range))]\n",
     "\n",
-    "data1_2[49]['visible'] = True\n",
+    "data1_2[7]['visible'] = True\n",
     "\n",
     "data2_1 = [dict(\n",
     "        visible = False,\n",
@@ -602,7 +614,7 @@
     "        text = 'S<sub>1</sub>: Bloch Simulation',\n",
     "        hoverinfo = 'x+y+text') for ii in range(len(Nex_range))]\n",
     "\n",
-    "data2_1[49]['visible'] = True\n",
+    "data2_1[7]['visible'] = True\n",
     "\n",
     "data2_2 = [dict(\n",
     "        visible = False,\n",
@@ -613,7 +625,7 @@
     "        text = 'S<sub>2</sub>: Bloch Simulation',\n",
     "        hoverinfo = 'x+y+text') for ii in range(len(Nex_range))]\n",
     "\n",
-    "data2_2[49]['visible'] = True\n",
+    "data2_2[7]['visible'] = True\n",
     "\n",
     "data = data1_1 + data2_1 + data1_2 + data2_2\n",
     "\n",
@@ -759,7 +771,21 @@
     "Nex_range = [1:9, 10:10:100];\n",
     "\n",
     "%% Calculate signals\n",
-    "%\n",
+    "% This results were precomputed. Uncomment the lines below to run the simulation.\n",
+    "signal1_ideal = load('../blochsim/signal1_ideal_spoil.mat');\n",
+    "signal2_ideal = load('../blochsim/signal2_ideal_spoil.mat');\n",
+    "signal1_optimal = load('../blochsim/signal1_optimal_crush_and_rf_spoil.mat');\n",
+    "signal2_optimal = load('../blochsim/signal2_optimal_crush_and_rf_spoil.mat');\n",
+    "signal1_no_spoil = load('../blochsim/signal1_no_gradient_and_rf_spoil.mat');\n",
+    "signal2_no_spoil = load('../blochsim/signal2_no_gradient_and_rf_spoil.mat');\n",
+    "signal1_ideal = signal1_optimal.signal1_ideal_spoil;\n",
+    "signal2_ideal = signal2_optimal.signal2_ideal_spoil;\n",
+    "signal1_optimal_crush_and_rf_spoil = signal1_optimal.signal1_optimal_crush_and_rf_spoil;\n",
+    "signal2_optimal_crush_and_rf_spoil = signal2_optimal.signal2_optimal_crush_and_rf_spoil;\n",
+    "signal1_no_gradient_and_rf_spoil = signal1_no_spoil.signal1_no_gradient_and_rf_spoil;\n",
+    "signal2_no_gradient_and_rf_spoil = signal2_no_spoil.signal2_no_gradient_and_rf_spoil;\n",
+    "\n",
+    "%{\n",
     "% To see all the options available, run `help b1_afi.analytical_solution`\n",
     "\n",
     "for ii = 1:length(Nex_range)\n",
@@ -786,7 +812,8 @@
     "    [~, Msig1, Msig2] = b1_afi.bloch_sim(params);\n",
     "    signal1_no_gradient_and_rf_spoil(ii,:) = abs(Msig1);\n",
     "    signal2_no_gradient_and_rf_spoil(ii,:) = abs(Msig2);\n",
-    "end\n"
+    "end\n",
+    "%}"
    ]
   },
   {
