Fix blochsim filename

--- a/afi_blog/ActualFlipAngleImaging.ipynb
+++ b/afi_blog/ActualFlipAngleImaging.ipynb
@@ -521,10 +521,10 @@
     "\n",
     "%% Calculate signals\n",
     "% This results were precomputed. Uncomment the lines below to run the simulation.\n",
-    "signal1_bloch = load('../blochsim/signal1_blochsim.mat');\n",
-    "signal2_bloch = load('../blochsim/signal2_blochsim.mat');\n",
-    "signal1_analytical = load('../blochsim/signal1_analytical.mat');\n",
-    "signal2_analytical = load('../blochsim/signal2_analytical.mat');\n",
+    "signal1_bloch = load('../afi_blog/blochsim/signal1_blochsim.mat');\n",
+    "signal2_bloch = load('../afi_blog/blochsim/signal2_blochsim.mat');\n",
+    "signal1_analytical = load('../afi_blog/blochsim/signal1_analytical.mat');\n",
+    "signal2_analytical = load('../afi_blog/blochsim/signal2_analytical.mat');\n",
     "signal1_blochsim = signal1_bloch.signal1_blochsim;\n",
     "signal2_blochsim = signal2_bloch.signal2_blochsim;\n",
     "signal1_analytical = signal1_analytical.signal1_analytical;\n",
@@ -772,14 +772,14 @@
     "\n",
     "%% Calculate signals\n",
     "% This results were precomputed. Uncomment the lines below to run the simulation.\n",
-    "signal1_ideal = load('../blochsim/signal1_ideal_spoil.mat');\n",
-    "signal2_ideal = load('../blochsim/signal2_ideal_spoil.mat');\n",
-    "signal1_optimal = load('../blochsim/signal1_optimal_crush_and_rf_spoil.mat');\n",
-    "signal2_optimal = load('../blochsim/signal2_optimal_crush_and_rf_spoil.mat');\n",
-    "signal1_no_spoil = load('../blochsim/signal1_no_gradient_and_rf_spoil.mat');\n",
-    "signal2_no_spoil = load('../blochsim/signal2_no_gradient_and_rf_spoil.mat');\n",
-    "signal1_ideal = signal1_optimal.signal1_ideal_spoil;\n",
-    "signal2_ideal = signal2_optimal.signal2_ideal_spoil;\n",
+    "signal1_ideal = load('../afi_blog/blochsim/signal1_ideal_spoil.mat');\n",
+    "signal2_ideal = load('../afi_blog/blochsim/signal2_ideal_spoil.mat');\n",
+    "signal1_optimal = load('../afi_blog/blochsim/signal1_optimal_crush_and_rf_spoil.mat');\n",
+    "signal2_optimal = load('../afi_blog/blochsim/signal2_optimal_crush_and_rf_spoil.mat');\n",
+    "signal1_no_spoil = load('../afi_blog/blochsim/signal1_no_gradient_and_rf_spoil.mat');\n",
+    "signal2_no_spoil = load('../afi_blog/blochsim/signal2_no_gradient_and_rf_spoil.mat');\n",
+    "signal1_ideal_spoil = signal1_ideal.signal1_ideal_spoil;\n",
+    "signal2_ideal_spoil = signal2_ideal.signal2_ideal_spoil;\n",
     "signal1_optimal_crush_and_rf_spoil = signal1_optimal.signal1_optimal_crush_and_rf_spoil;\n",
     "signal2_optimal_crush_and_rf_spoil = signal2_optimal.signal2_optimal_crush_and_rf_spoil;\n",
     "signal1_no_gradient_and_rf_spoil = signal1_no_spoil.signal1_no_gradient_and_rf_spoil;\n",
