Show B1 filtered (median)

--- a/afi_blog/ActualFlipAngleImaging.ipynb
+++ b/afi_blog/ActualFlipAngleImaging.ipynb
@@ -1938,7 +1938,7 @@
    "outputs": [],
    "source": [
     "B1map_filtered = load_nii_data('../afi_blog/fitResults/FitResults_median_filter/B1map_filtered.nii.gz');\n",
-    "B1map_filtered = imrotate(squeeze(FitResults.B1map_filtered(:,:,14)),-90);"
+    "B1map_filtered = imrotate(squeeze(B1map_filtered(:,:,14)),-90);"
    ]
   },
   {
