B1 map filtered (7x7x7 median filter)

--- a/afi_blog/ActualFlipAngleImaging.ipynb
+++ b/afi_blog/ActualFlipAngleImaging.ipynb
@@ -1858,7 +1858,7 @@
     "            x=0.60,\n",
     "            y=1.15,\n",
     "            showarrow=False,\n",
-    "            text='B<sub>1</sub> field map',\n",
+    "            text='Raw B<sub>1</sub> map',\n",
     "            font=dict(\n",
     "                family='Times New Roman',\n",
     "                size=26\n",
@@ -1924,7 +1924,7 @@
     "<div class=figure_caption>\n",
     "<p style=\"text-align:justify;\">\n",
     "<b>  \n",
-    "Figure 9. Raw (left) and filtered (right) B<sub>1</sub> map. A median filter of size 3x3x3 pixels was used to attenuate the Gibbs ringing artifact. \n",
+    "Figure 9. Raw (left) and filtered (right) B<sub>1</sub> map. A median filter of size 7x7x7 pixels was used to attenuate the Gibbs ringing artifact. \n",
     "</b>\n",
     "</div>"
    ]
