--- a/afi_blog/ActualFlipAngleImaging.ipynb
+++ b/afi_blog/ActualFlipAngleImaging.ipynb
@@ -1747,7 +1747,11 @@
     "\n",
     "% Raw MRI AFI data\n",
     "AFIData1 = imrotate(squeeze(data.AFIData1(:,:,14)),-90);\n",
-    "AFIData2 = imrotate(squeeze(data.AFIData2(:,:,14)),-90);"
+    "AFIData2 = imrotate(squeeze(data.AFIData2(:,:,14)),-90);\n",
+    "\n",
+    "% Load mask\n",
+    "mask = load_nii_data('../afi_blog/fitResults/FitResults_median_filter/mask.nii.gz');\n",
+    "mask = imrotate(squeeze(mask(:,:,14)),-90);"
    ]
   },
   {
@@ -1764,6 +1768,7 @@
     "%get B1map_raw --from Octave\n",
     "%get AFIData1 --from Octave\n",
     "%get AFIData2 --from Octave\n",
+    "%get mask --from Octave\n",
     "%get xAxis --from Octave\n",
     "%get yAxis --from Octave"
    ]
@@ -1797,7 +1802,7 @@
     "                   name = 'Signal2')\n",
     "trace3 = go.Heatmap(x = xAxis,\n",
     "                   y = yAxis,\n",
-    "                   z=B1map_raw,\n",
+    "                   z=B1map_raw*mask,\n",
     "                   zmin=0.7,\n",
     "                   zmax=1.3,\n",
     "                   colorscale='RdBu',\n",
@@ -1970,7 +1975,7 @@
     "\n",
     "trace1 = go.Heatmap(x = xAxis,\n",
     "                   y = yAxis,\n",
-    "                   z=B1map_raw,\n",
+    "                   z=B1map_raw*mask,\n",
     "                   zmin=0.7,\n",
     "                   zmax=1.3,\n",
     "                   colorscale='RdBu',\n",
@@ -1979,7 +1984,7 @@
     "                   name = 'B1 values')\n",
     "trace2 = go.Heatmap(x = xAxis,\n",
     "                   y = yAxis,\n",
-    "                   z=B1map_filtered,\n",
+    "                   z=B1map_filtered*mask,\n",
     "                   zmin=0.7,\n",
     "                   zmax=1.3,\n",
     "                   colorscale='RdBu',\n",
