--- a/afi_blog/ActualFlipAngleImaging.ipynb
+++ b/afi_blog/ActualFlipAngleImaging.ipynb
@@ -1786,6 +1786,13 @@
    "source": [
     "from plotly import tools\n",
     "\n",
+    "# Masking B1 map\n",
+    "B1map_raw = np.asarray(B1map_raw)\n",
+    "mask = np.asarray(mask)\n",
+    "B1map_raw_masked = B1map_raw*mask\n",
+    "B1map_raw_masked[np.isnan(B1map_raw_masked)] = 0\n",
+    "\n",
+    "\n",
     "trace1 = go.Heatmap(x = xAxis,\n",
     "                   y = yAxis,\n",
     "                   z=AFIData1,\n",
@@ -1973,9 +1980,14 @@
    "source": [
     "from plotly import tools\n",
     "\n",
+    "# Masking B1 map\n",
+    "B1map_filtered = np.asarray(B1map_filtered)\n",
+    "B1map_filtered_masked = B1map_filtered*mask\n",
+    "B1map_filtered_masked[np.isnan(B1map_filtered_masked)] = 0\n",
+    "\n",
     "trace1 = go.Heatmap(x = xAxis,\n",
     "                   y = yAxis,\n",
-    "                   z=B1map_raw*mask,\n",
+    "                   z=B1map_raw_masked,\n",
     "                   zmin=0.7,\n",
     "                   zmax=1.3,\n",
     "                   colorscale='RdBu',\n",
@@ -1984,7 +1996,7 @@
     "                   name = 'B1 values')\n",
     "trace2 = go.Heatmap(x = xAxis,\n",
     "                   y = yAxis,\n",
-    "                   z=B1map_filtered*mask,\n",
+    "                   z=B1map_filtered_masked,\n",
     "                   zmin=0.7,\n",
     "                   zmax=1.3,\n",
     "                   colorscale='RdBu',\n",
