--- a/afi_blog/ActualFlipAngleImaging.ipynb
+++ b/afi_blog/ActualFlipAngleImaging.ipynb
@@ -1809,7 +1809,7 @@
     "                   name = 'Signal2')\n",
     "trace3 = go.Heatmap(x = xAxis,\n",
     "                   y = yAxis,\n",
-    "                   z=B1map_raw*mask,\n",
+    "                   z=B1map_raw_masked,\n",
     "                   zmin=0.7,\n",
     "                   zmax=1.3,\n",
     "                   colorscale='RdBu',\n",
@@ -1982,6 +1982,7 @@
     "\n",
     "# Masking B1 map\n",
     "B1map_filtered = np.asarray(B1map_filtered)\n",
+    "mask = np.asarray(mask)\n",
     "B1map_filtered_masked = B1map_filtered*mask\n",
     "B1map_filtered_masked[np.isnan(B1map_filtered_masked)] = 0\n",
     "\n",
