Update links and plot labels

--- a/afi_blog/ActualFlipAngleImaging.ipynb
+++ b/afi_blog/ActualFlipAngleImaging.ipynb
@@ -119,7 +119,7 @@
     "</p>\n",
     "\n",
     "<p style=\"text-align:justify;\">\n",
-    "In this blog post, we will focus on presenting details about the AFI B<sub>1</sub> mapping method. We will cover signal modeling, data fitting, the benefits and the pitfalls of the technique. The figures are generated using the <a href=\"https://qmrlab.readthedocs.io/en/master/b1_afi_batch.html\">qMRLab module</a> for this method. \n",
+    "In this blog post, we will focus on presenting details about the AFI B<sub>1</sub> mapping method. We will cover signal modeling, data fitting, the benefits and the pitfalls of the technique. The figures are generated using the qMRLab module for this method. \n",
     "</p>\n",
     "</div>"
    ]
@@ -749,7 +749,7 @@
     "<div class=figure_caption>\n",
     "<p style=\"text-align:justify;\">\n",
     "<b>\n",
-    "Figure 4. Signal 1 (solid lines) and Signal 2 (dashed lines) curves estimated using Bloch simulations for three categories of signal spoiling: (1) ideal spoiling (blue), gradient & RF Spoiling (red), and no spoiling (orange). Simulation details: TR<sub>1</sub> = 20 ms, TR<sub>2</sub> = 100 ms, T<sub>1</sub> = 900 ms, T<sub>2</sub> = 100 ms, TE = 5 ms, 100 spins. For the ideal spoiling case, the transverse magnetization is set to zero at the end of each TR. For the gradient & RF spoiling case, each spin is rotated by different increments of phase (2𝜋 / # of spins) to simulate complete dephasing from gradient spoiling, and the RF phase of the excitation pulse is  ɸ<sub><i>n</i></sub> = ɸ<sub><i>n</i>-1</sub> + <i>n</i>ɸ<sub>0</sub> = ½ ɸ<sub>0</sub>(<i>n</i><sup>2</sup> + <i>n</i> + 2) (Bernstein et al. 2004) with ɸ<sub>0</sub> = 39° (Zur et al. 1991) after each TR.\n",
+    "Figure 4. Signal 1 curves estimated using Bloch simulations for three categories of signal spoiling: (1) ideal spoiling (blue), gradient & RF Spoiling (red), and no spoiling (orange). Simulation details: TR<sub>1</sub> = 20 ms, TR<sub>2</sub> = 100 ms, T<sub>1</sub> = 900 ms, T<sub>2</sub> = 100 ms, TE = 5 ms, 100 spins. For the ideal spoiling case, the transverse magnetization is set to zero at the end of each TR. For the gradient & RF spoiling case, each spin is rotated by different increments of phase (2𝜋 / # of spins) to simulate complete dephasing from gradient spoiling, and the RF phase of the excitation pulse is  ɸ<sub><i>n</i></sub> = ɸ<sub><i>n</i>-1</sub> + <i>n</i>ɸ<sub>0</sub> = ½ ɸ<sub>0</sub>(<i>n</i><sup>2</sup> + <i>n</i> + 2) (Bernstein et al. 2004) with ɸ<sub>0</sub> = 39° (Zur et al. 1991) after each TR.\n",
     "</b>\n",
     "</p>\n",
     "</div>"
@@ -1185,7 +1185,7 @@
     "            x=-0.15,\n",
     "            y=0.5,\n",
     "            showarrow=False,\n",
-    "            text='r = S<sub>2</sub>/S<sub>1</sub>',\n",
+    "            text='Signal',\n",
     "            font=dict(\n",
     "                family='Times New Roman',\n",
     "                size=22\n",
@@ -1402,7 +1402,7 @@
     "            x=-0.15,\n",
     "            y=0.5,\n",
     "            showarrow=False,\n",
-    "            text='r = S<sub>2</sub>/S<sub>1</sub>',\n",
+    "            text='Signal',\n",
     "            font=dict(\n",
     "                family='Times New Roman',\n",
     "                size=22\n",
@@ -1615,7 +1615,7 @@
     "            x=-0.15,\n",
     "            y=0.5,\n",
     "            showarrow=False,\n",
-    "            text='r = S<sub>2</sub>/S<sub>1</sub>',\n",
+    "            text='Signal',\n",
     "            font=dict(\n",
     "                family='Times New Roman',\n",
     "                size=22\n",
@@ -2091,7 +2091,7 @@
    "source": [
     "<div class=blog_body>\n",
     "<p style=\"text-align:justify;\">\n",
-    "B<sub>1</sub> mapping is of interest for diverse MRI applications, and several mapping techniques have been developed. The DAM method consists of acquiring two scans at two different flip angles. To avoid the dependence of the signal on T<sub>1</sub>, long repetition times are required to allow the recovery of the longitudinal magnetization between pulses (Yarnykh 2007; Insko & Bolinger 1993). The AFI method overcomes this practical limitation by repeating the pulse sequence at a fast rate to achieve a pulsed state of magnetization and shorter time delays between pulses. In addition, due to scan-time constraints, B<sub>1</sub> mapping methods are often implemented in 2D (Chavez & Stanisz 2011). However, the accuracy of the measurements of 2D B<sub>1</sub> mapping techniques is compromised by the slice profile effects due to the problem of nonuniform excitation across slices (Yarnykh 2007; Chavez & Stanisz 2011). The AFI method on the other hand, adresses this issue using a fast 3D implementation leading to scans with an excellent anatomical coverage in clinically feasible times, with an increase in signal-to-noise ratio compared to 2D multislice acquisitions.\n",
+    "B<sub>1</sub> mapping is of interest for diverse MRI applications, and several mapping techniques have been developed. The DAM method consists of acquiring two scans at two different flip angles. To avoid the dependence of the signal on T<sub>1</sub>, long repetition times are required to allow the recovery of the longitudinal magnetization between pulses (Yarnykh 2007; Insko & Bolinger 1993). The AFI method overcomes this practical limitation by repeating the pulse sequence at a fast rate to achieve a pulsed state of magnetization and shorter time delays between pulses. In addition, due to scan-time constraints, B<sub>1</sub> mapping methods are often implemented in 2D (Chavez & Stanisz 2011). However, the accuracy of the measurements of 2D B<sub>1</sub> mapping techniques is compromised by the slice profile effects due to the problem of nonuniform excitation across slices (Yarnykh 2007; Chavez & Stanisz 2011). The AFI method on the other hand, offers a solution to this issue using a fast 3D implementation leading to scans with an excellent anatomical coverage in clinically feasible times, with an increase in signal-to-noise ratio compared to 2D multislice acquisitions.\n",
     "</p>\n",
     "\n",
     "<p style=\"text-align:justify;\">\n",
