Fix missing saves

--- a/afi_blog/ActualFlipAngleImaging.ipynb
+++ b/afi_blog/ActualFlipAngleImaging.ipynb
@@ -1185,7 +1185,7 @@
     "            x=-0.15,\n",
     "            y=0.5,\n",
     "            showarrow=False,\n",
-    "            text='Signal',\n",
+    "            text='r = S<sub>2</sub>/S<sub>1</sub>',\n",
     "            font=dict(\n",
     "                family='Times New Roman',\n",
     "                size=22\n",
@@ -1402,7 +1402,7 @@
     "            x=-0.15,\n",
     "            y=0.5,\n",
     "            showarrow=False,\n",
-    "            text='Signal',\n",
+    "            text='r = S<sub>2</sub>/S<sub>1</sub>',\n",
     "            font=dict(\n",
     "                family='Times New Roman',\n",
     "                size=22\n",
@@ -1615,7 +1615,7 @@
     "            x=-0.15,\n",
     "            y=0.5,\n",
     "            showarrow=False,\n",
-    "            text='Signal',\n",
+    "            text='r = S<sub>2</sub>/S<sub>1</sub>',\n",
     "            font=dict(\n",
     "                family='Times New Roman',\n",
     "                size=22\n",
@@ -2091,7 +2091,7 @@
    "source": [
     "<div class=blog_body>\n",
     "<p style=\"text-align:justify;\">\n",
-    "B<sub>1</sub> mapping is of interest for diverse MRI applications, and several mapping techniques have been developed. The DAM method consists of acquiring two scans at two different flip angles. To avoid the dependence of the signal on T<sub>1</sub>, long repetition times are required to allow the recovery of the longitudinal magnetization between pulses (Yarnykh 2007; Insko & Bolinger 1993). The AFI method overcomes this practical limitation by repeating the pulse sequence at a fast rate to achieve a pulsed state of magnetization and shorter time delays between pulses. In addition, due to scan-time constraints, B<sub>1</sub> mapping methods are often implemented in 2D (Chavez & Stanisz 2011). However, the accuracy of the measurements of 2D B<sub>1</sub> mapping techniques is compromised by the slice profile effects due to the problem of nonuniform excitation across slices (Yarnykh 2007; Chavez & Stanisz 2011). The AFI method on the other hand, offers a solution to this issue using a fast 3D implementation leading to scans with an excellent anatomical coverage in clinically feasible times, with an increase in signal-to-noise ratio compared to 2D multislice acquisitions.\n",
+    "B<sub>1</sub> mapping is of interest for diverse MRI applications, and several mapping techniques have been developed. The DAM method consists of acquiring two scans at two different flip angles. To avoid the dependence of the signal on T<sub>1</sub>, long repetition times are required to allow the recovery of the longitudinal magnetization between pulses (Yarnykh 2007; Insko & Bolinger 1993). The AFI method overcomes this practical limitation by repeating the pulse sequence at a fast rate to achieve a pulsed state of magnetization and shorter time delays between pulses. In addition, due to scan-time constraints, B<sub>1</sub> mapping methods are often implemented in 2D (Chavez & Stanisz 2011). However, the accuracy of the measurements of 2D B<sub>1</sub> mapping techniques is compromised by the slice profile effects due to the problem of nonuniform excitation across slices (Yarnykh 2007; Chavez & Stanisz 2011). The AFI method on the other hand, adresses this issue using a fast 3D implementation leading to scans with an excellent anatomical coverage in clinically feasible times, with an increase in signal-to-noise ratio compared to 2D multislice acquisitions.\n",
     "</p>\n",
     "\n",
     "<p style=\"text-align:justify;\">\n",
